@@ -1,12 +1,19 @@
 package com.restroly.qrmenu.user.service;
 
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
+import com.restroly.qrmenu.exception.ResourceAlreadyExistsException;
 import com.restroly.qrmenu.user.dto.RoleResponse;
+import com.restroly.qrmenu.user.dto.UserProfileRequestDTO;
+import com.restroly.qrmenu.user.dto.UserProfileResponseDTO;
 import com.restroly.qrmenu.user.dto.UserRequest;
 import com.restroly.qrmenu.user.dto.UserResponse;
+import com.restroly.qrmenu.restaurant.entity.Restaurant;
+import com.restroly.qrmenu.restaurant.repository.RestaurantRepository;
 import com.restroly.qrmenu.user.entity.Role;
 import com.restroly.qrmenu.user.entity.User;
-import com.restroly.qrmenu.user.exception.DuplicateResourceException;
-import com.restroly.qrmenu.user.exception.UserNotFoundException;
+import com.restroly.qrmenu.exception.DuplicateResourceException;
+import com.restroly.qrmenu.exception.UserNotFoundException;
 import com.restroly.qrmenu.user.repository.RoleRepository;
 import com.restroly.qrmenu.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
@@ -20,6 +27,9 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Base64;
+import java.util.Collections;
 
 @Service
 @RequiredArgsConstructor
@@ -29,6 +39,7 @@ public class UserServiceImpl implements UserService {
 
     private final UserRepository userRepository;
     private final RoleRepository roleRepository;
+    private final RestaurantRepository restaurantRepository;
     private final PasswordEncoder passwordEncoder;
 
     // =============================
@@ -67,11 +78,49 @@ public class UserServiceImpl implements UserService {
             user.setRoles(roles);
 
         } else {
-            roleRepository.findByName("ROLE_USER")
-                    .ifPresent(role -> user.setRoles(List.of(role)));
+            // Default to the CUSTOMER role which is used across auth flows
+            Role customerRole = roleRepository.findByName("CUSTOMER")
+        .orElseThrow(() ->
+                new IllegalStateException("Default CUSTOMER role not found"));
+
+        user.setRoles(
+                new ArrayList<>(Collections.singletonList(customerRole)));
         }
 
-        return mapToResponse(userRepository.save(user));
+        User savedUser = userRepository.save(user);
+        createRestaurantIfRequested(request);
+
+        return mapToResponse(savedUser);
+    }
+
+    private void createRestaurantIfRequested(UserRequest request) {
+        if (request.getRestaurantName() == null || request.getRestaurantName().isBlank()) {
+            return;
+        }
+
+        String restaurantName = request.getRestaurantName().trim();
+        if (restaurantRepository.existsByNameIgnoreCase(restaurantName)) {
+            throw new ResourceAlreadyExistsException(
+                    "Restaurant already exists with name: " + restaurantName);
+        }
+
+        Restaurant restaurant = Restaurant.builder()
+                .name(restaurantName)
+                .description(normalizeRestaurantDescription(request, restaurantName))
+                .phoneNumber(normalizeOptionalText(request.getRestaurantPhoneNumber()))
+                .isActive(true)
+                .build();
+
+        restaurantRepository.save(restaurant);
+    }
+
+    private String normalizeRestaurantDescription(UserRequest request, String restaurantName) {
+        String description = normalizeOptionalText(request.getRestaurantDescription());
+        return description != null ? description : restaurantName;
+    }
+
+    private String normalizeOptionalText(String value) {
+        return value == null || value.isBlank() ? null : value.trim();
     }
 
     // =============================
@@ -263,4 +312,92 @@ public class UserServiceImpl implements UserService {
                 .roles(roles)
                 .build();
     }
+
+@Override
+public UserProfileResponseDTO getCurrentUserProfile() {
+
+    Authentication authentication =
+            SecurityContextHolder.getContext().getAuthentication();
+
+    String email = authentication.getName();
+
+        User user = userRepository.findByEmailWithRoles(email)
+            .orElseThrow(() ->
+                new UserNotFoundException(
+                    "User not found with email: " + email));
+
+    return UserProfileResponseDTO.builder()
+            .userId(user.getUserId())
+            .name(user.getName())
+            .email(user.getEmail())
+            .phoneNumber(user.getPhoneNumber())
+            .profileImage(encodeProfileImage(user.getUserProfile()))
+            .build();
+}
+
+private String encodeProfileImage(byte[] imageBytes) {
+    if (imageBytes == null || imageBytes.length == 0) {
+        return null;
+    }
+    return Base64.getEncoder().encodeToString(imageBytes);
+}
+
+@Override
+public UserProfileResponseDTO updateUserProfile(UserProfileRequestDTO request) {
+
+    Authentication authentication =
+            SecurityContextHolder.getContext().getAuthentication();
+
+    String email = authentication.getName();
+
+    User user = userRepository.findByEmailWithRoles(email)
+            .orElseThrow(() ->
+                    new UserNotFoundException(
+                            "User not found with email: " + email));
+        // System.out.println("BEFORE UPDATE ROLES: " + user.getRoles()); line added fo debugging
+
+    log.info("Updating profile for user: {}", email);
+    log.info("Incoming request: {}", request);
+
+    // Update only non-null fields
+    if (request.getName() != null && !request.getName().isBlank()) {
+        user.setName(request.getName());
+    }
+
+    if (request.getPhoneNumber() != null &&
+            !request.getPhoneNumber().isBlank()) {
+        user.setPhoneNumber(request.getPhoneNumber());
+    }
+
+    // Handle profile image safely
+    if (request.getProfileImageBytes() != null &&
+            request.getProfileImageBytes().length > 0) {
+
+        log.info("Updating profile image for user: {}", email);
+
+        user.setUserProfile(request.getProfileImageBytes());
+    }
+
+    // Prevent accidental auth corruption
+    if (user.getEmail() == null || user.getEmail().isBlank()) {
+        throw new IllegalStateException("User email became null during profile update");
+    }
+
+    if (user.getRoles() == null || user.getRoles().isEmpty()) {
+        throw new IllegalStateException("User roles became empty during profile update");
+    }
+
+    User updatedUser = userRepository.save(user);
+
+    log.info("Profile updated successfully for user: {}", email);
+
+    return UserProfileResponseDTO.builder()
+            .userId(updatedUser.getUserId())
+            .name(updatedUser.getName())
+            .email(updatedUser.getEmail())
+            .phoneNumber(updatedUser.getPhoneNumber())
+            .profileImage(encodeProfileImage(updatedUser.getUserProfile()))
+            .build();
+
+        }
 }
